Basic parentheses support in decompiler